Set homepage to load on '/'

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "site-de-service",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cocorico03.github.io/SiteDeService",
+
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+   
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
